--- a/chat.html
+++ b/chat.html
@@ -146,7 +146,7 @@ async function sendMessage() {
     input.value = "";
 
     try {
-        const res = await fetch("http://127.0.0.1:8000/chat", {
+        const res = await fetch("https://hsb-chatbot.onrender.com/chat", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
